fixed body size on mobile devices

--- a/app/styles.css
+++ b/app/styles.css
@@ -70,20 +70,21 @@ header h2 {
 
 body {
     margin: 0;
+    background-color: black;
 }
 
 
 #transition {
     width: 100%;
     height: 1rem;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.9));
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.85));
     transform: translate(0, 30rem);
 }
 
 #content {
     font-size: 1.2rem;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.85);
     color: white;
     transform: translate(0, 30rem);
 }
@@ -122,4 +123,8 @@ body {
 
 .cryptedmail:after {
     content: attr(data-name) "@" attr(data-domain) "." attr(data-tld); 
+}
+
+#Contact {
+    word-break: break-all;
 }
